--- a/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/header.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/header.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark container px-3">
         <div class="container-fluid">
 
-            <a class="navbar-brand fw-bold d-flex align-items-center" href="/" th:href="@{/}"
+            <a class="navbar-brand fw-bold d-flex align-items-center" href="../otros/dashboard.html" th:href="@{/admin/dashboard}"
                 title="Ir a la página principal del sistema">
                 <i class="bi bi-shield-exclamation me-2"></i>
                 Gestor de Incidencias
