--- a/GarciaMariaPablo/src/main/resources/templates/admin/estado/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/estado/listar.html
@@ -135,7 +135,7 @@
 
                 </table>
             </div>
-            <section th:replace="~{admin/_fragments/paginacion.html :: paginacion}"></section>
+            <section th:replace="~{_fragments/paginacion.html :: paginacion}"></section>
         </section>
     </main>
     <footer th:replace="~{_fragments/footer.html :: footer}"></footer>
