--- a/GarciaMariaPablo/src/main/resources/templates/global/_fragments/header.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/_fragments/header.html
@@ -7,8 +7,7 @@
                 <span class="fw-bold">Gestión de Incidencias</span>
             </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#menuLateral"
-                aria-controls="menuLateral">
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#menuLateral">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -50,7 +49,8 @@
             <a th:href="@{/}" href="../index.html" class="nav-link" title="Volver al inicio">
                 <i class="bi bi-house me-2"></i>Inicio
             </a>
-            <a th:href="@{/nosotros}" href="../quienes-somos.html" class="nav-link" title="Ver información sobre el equipo">
+            <a th:href="@{/nosotros}" href="../quienes-somos.html" class="nav-link"
+                title="Ver información sobre el equipo">
                 <i class="bi bi-people me-2"></i>Quiénes somos
             </a>
             <a th:href="@{/contacto}" href="../contacto.html" class="nav-link" title="Ir a la página de contacto">
@@ -59,7 +59,8 @@
             <a th:href="@{/faq}" href="../faq.html" class="nav-link" title="Consultar preguntas frecuentes">
                 <i class="bi bi-question-circle me-2"></i>Preguntas frecuentes
             </a>
-            <a th:href="@{/politica-privacidad}" href="../politica-privacidad.html" class="nav-link" title="Ver política de privacidad">
+            <a th:href="@{/politica-privacidad}" href="../politica-privacidad.html" class="nav-link"
+                title="Ver política de privacidad">
                 <i class="bi bi-shield-lock me-2"></i>Política de privacidad
             </a>
 
