--- a/GarciaMariaPablo/src/main/resources/templates/admin/usuario/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/usuario/listar.html
@@ -130,7 +130,7 @@
                 </table>
             </div>
 
-            <section th:replace="~{admin/_fragments/paginacion.html :: paginacion}"></section>
+            <section th:replace="~{_fragments/paginacion.html :: paginacion}"></section>
         </section>
     </main>
 
