--- a/GarciaMariaPablo/src/main/resources/templates/user/incidencia/inspeccionar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/user/incidencia/inspeccionar.html
@@ -103,7 +103,7 @@
                         <i class="bi bi-arrow-left me-1"></i>Volver al listado
                     </a>
                     <div>
-                        <a href="formulario.html" th:href="@{'/user/incidencias/modificar/' + ${incidencia.id}}"
+                        <a th:unless="${incidencia.estado.tipo == 'Final'}" href="formulario.html" th:href="@{'/user/incidencias/modificar/' + ${incidencia.id}}"
                             class="btn btn-primary me-2">
                             <i class="bi bi-pencil me-1"></i>Editar
                         </a>
