--- a/GarciaMariaPablo/src/main/resources/templates/_fragments/headerPerfil.html
+++ b/GarciaMariaPablo/src/main/resources/templates/_fragments/headerPerfil.html
@@ -25,7 +25,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="dropdown-item" th:href="@{/perfil}" title="Ir a tu perfil">
+                    <a class="dropdown-item" th:href="@{/perfil}" href="../global/perfil.html" title="Ir a tu perfil">
                         <i class="bi bi-person me-2"></i>
                         Mi perfil
                     </a>
