--- a/GarciaMariaPablo/src/main/resources/templates/global/register.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/register.html
@@ -48,7 +48,7 @@
                         <div class="input-group">
                             <input th:field="*{password}" type="password" id="password"
                                 class="form-control form-control-lg" placeholder="Contraseña" required minlength="8"
-                                maxlength="32" pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*\d).{8,32}$"
+                                maxlength="32"
                                 title="Debe tener entre 8 y 32 caracteres, con al menos una mayúscula, una minúscula y un número.">
                             <button type="button" class="btn btn-outline-secondary" id="togglePassword">
                                 <i class="bi bi-eye" id="togglePasswordIcon"></i>
