--- a/GarciaMariaPablo/src/main/resources/templates/user/otros/dashboard.html
+++ b/GarciaMariaPablo/src/main/resources/templates/user/otros/dashboard.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress Annotator -->
 <html lang="es" class="h-100">
 
 <head>
@@ -89,7 +90,7 @@
                             Consulta o edita tu información personal y contraseña. Mantén tus datos actualizados
                             para una mejor comunicación.
                         </p>
-                        <a href="../usuario/perfil.html" th:href="@{/user/perfil}" title="Ir a mi perfil"
+                        <a href="../../global/perfil.html" th:href="@{/perfil}" title="Ir a mi perfil"
                             class="btn btn-info px-4 text-light">
                             <i class="bi bi-person-circle me-2"></i>Perfil
                         </a>
