--- a/GarciaMariaPablo/src/main/resources/templates/_fragments/paginacion.html
+++ b/GarciaMariaPablo/src/main/resources/templates/_fragments/paginacion.html
@@ -18,6 +18,7 @@
         <ul class="pagination mb-0 h-auto">
 
             <li class="page-item" th:classappend="${paginaActual == 1} ? 'disabled'">
+                <!--suppress Annotator -->
                 <button type="button" class="page-link d-flex justify-content-center align-items-center h-100"
                     th:data-page="${paginaActual-1}" onclick="changePage(this)" th:disabled="${paginaActual == 1}">
                     <i class="bi bi-chevron-left"></i>
