--- a/GarciaMariaPablo/src/main/resources/templates/user/incidencia/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/user/incidencia/listar.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress Annotator -->
 <html lang="es" class="h-100">
 
 <head>
@@ -206,8 +207,8 @@
                             <i class="bi bi-x-circle me-2"></i>Cancelar
                         </button>
                         <form id="formEliminarIncidencia" th:method="delete">
+                            <!-- No se usa input submit porque tiene un icono -->
                             <button type="submit" class="btn btn-danger">
-                                <!-- No se usa input submit porque tiene un icono -->
                                 <i class="bi bi-trash me-2"></i>Eliminar
                             </button>
                         </form>
